feat: admin pages

--- a/hero.html
+++ b/hero.html
@@ -57,7 +57,6 @@
               name="trip-type"
               value="round-trip"
             />
-            <label for="round-trip">Round-trip</label>
           </div>
 
           <div class="trip-route">
@@ -88,28 +87,14 @@
               <input type="date" id="depart" name="depart" required />
             </div>
 
-            <div class="trip-schedule">
-              <label for="return">Return</label>
-              <input type="date" id="return" name="return" />
-            </div>
+            
           </div>
 
           <div class="trip-passengers">
             <div class="trip-passengers-label">
-              <label for="passengers">Passengers</label>
+              <label for="passengers"></label>
             </div>
-            <div class="trip-passengers-button">
-              <button type="button" onclick="decrementValue()">-</button>
-              <input
-                type="number"
-                id="passengers"
-                name="passengers"
-                value="1"
-                min="1"
-                required
-              />
-              <button type="button" onclick="incrementValue()">+</button>
-            </div>
+            
           </div>
           <br />
           <div id="dateError" class="error-message"></div>
@@ -119,6 +104,8 @@
           </button>
         </form>
       </div>
+      <a href="admin.php" class="back-link" style="margin-left: 50px;"> Back to navigation page</a>
+
     </main>
 
     <footer id="about-section">
