integrated database and changed file format for hero

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="destination-links">
-                <a class="destination-button user-button" href="hero.html" aria-label="Go to User Dashboard">
+                <a class="destination-button user-button" href="hero.php" aria-label="Go to User Dashboard">
                     <span>User</span>
                 </a>
                 <a class="destination-button admin-button" href="admin.php" aria-label="Go to Admin Dashboard">
