Updated the Home to index file

--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styling/index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styling/index.css" />
     <title>Bucket List</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main-wrapper">
-        <div class="hero-section"></div>
+      <div class="hero-section"></div>
 
-        <div class="destination-container">
-            <div class="destination-header">
-                <h1>Bucket List</h1>
-                <p>Please select your destination.</p>
-            </div>
-
-            <div class="destination-links">
-                <a class="destination-button user-button" href="hero.html" aria-label="Go to User Dashboard">
-                    <span>User</span>
-                </a>
-                <a class="destination-button admin-button" href="admin.php" aria-label="Go to Admin Dashboard">
-                    <span>Admin</span>
-                </a>
-            </div>
+      <div class="destination-container">
+        <div class="destination-header">
+          <h1>Busket List</h1>
+          <p>Please select your destination.</p>
         </div>
+
+        <div class="destination-links">
+          <a
+            class="destination-button user-button"
+            href="hero.html"
+            aria-label="Go to User Dashboard"
+          >
+            <span>User</span>
+          </a>
+          <a
+            class="destination-button admin-button"
+            href="admin.php"
+            aria-label="Go to Admin Dashboard"
+          >
+            <span>Admin</span>
+          </a>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
