--- a/hero.html
+++ b/hero.html
@@ -18,6 +18,22 @@
       nav ul li a:hover {
         color: #555;
       }
+      .passenger-control {
+        display: flex;
+        align-items: center;
+        gap: 6px; /* space between buttons and input */
+      }
+
+      .passenger-control button {
+        padding: 4px 10px;
+        font-size: 18px;
+        cursor: pointer;
+      }
+
+      .passenger-control input {
+        width: 50px;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -25,7 +41,7 @@
       <nav>
         <h1>Busket List</h1>
         <ul>
-          <li><a href="hero.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#about-section">About</a></li>
         </ul>
       </nav>
@@ -57,6 +73,7 @@
               name="trip-type"
               value="round-trip"
             />
+            <label for="round-trip">Round-trip</label>
           </div>
 
           <div class="trip-route">
@@ -87,25 +104,47 @@
               <input type="date" id="depart" name="depart" required />
             </div>
 
-            
+            <div
+              class="trip-schedule"
+              id="return-date-container"
+              style="display: none"
+            >
+              <label for="return">Return</label>
+              <input type="date" id="return" name="return" />
+            </div>
           </div>
 
           <div class="trip-passengers">
             <div class="trip-passengers-label">
-              <label for="passengers"></label>
+              <label for="passengers">Passengers</label>
             </div>
-            
+            <div class="passenger-control">
+              <button type="button" onclick="decrementValue()">-</button>
+              <input
+                type="number"
+                id="passengers"
+                name="passengers"
+                value="1"
+                min="1"
+                required
+              />
+              <button type="button" onclick="incrementValue()">+</button>
+            </div>
           </div>
+
           <br />
           <div id="dateError" class="error-message"></div>
+
           <input type="submit" value="Submit" />
           <button type="button" id="manageBookingsBtn">
             Manage my bookings
           </button>
         </form>
       </div>
-      <a href="admin.php" class="back-link" style="margin-left: 50px;"> Back to navigation page</a>
 
+      <a href="admin.php" class="back-link" style="margin-left: 50px"
+        >Back to navigation page</a
+      >
     </main>
 
     <footer id="about-section">
@@ -123,7 +162,6 @@
         <div class="footerBox">
           <h3>Terms of Service</h3>
           <hr />
-          <p>By using our service, you agree to provide accurate...</p>
           <p>
             By using our service, you agree to provide accurate booking
             information and comply with our travel and cancellation policies. We
@@ -203,7 +241,26 @@
       // Prevent past date selection
       const today = new Date().toISOString().split("T")[0];
       document.getElementById("depart").setAttribute("min", today);
+      document.getElementById("return").setAttribute("min", today);
 
+      // Show/hide return date field
+      const tripTypeRadios = document.getElementsByName("trip-type");
+      const returnContainer = document.getElementById("return-date-container");
+
+      tripTypeRadios.forEach((radio) => {
+        radio.addEventListener("change", function () {
+          if (this.value === "round-trip") {
+            returnContainer.style.display = "block";
+            document.getElementById("return").required = true;
+          } else {
+            returnContainer.style.display = "none";
+            document.getElementById("return").required = false;
+            document.getElementById("return").value = "";
+          }
+        });
+      });
+
+      // Return date must be after departure date
       document
         .getElementById("tripForm")
         .addEventListener("submit", function (e) {
